force-app/main/default/objects/Survey__c/fields/Where_Do_You_Buy_Pre_Packaged_Shakes__c.field-meta.xml
<CustomField>
    <fullName>Where_Do_You_Buy_Pre_Packaged_Shakes__c</fullName>
    <label>Where Do You Buy Pre-Packaged Shakes?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus dining hall</fullName>
            </value>
            <value>
                <fullName>On-Campus convenience store</fullName>
            </value>
            <value>
                <fullName>On-Campus grocery store</fullName>
            </value>
            <value>
                <fullName>On-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>On-campus restaurant</fullName>
            </value>
            <value>
                <fullName>Other on-campus location</fullName>
            </value>
            <value>
                <fullName>Off-Campus convenience store</fullName>
            </value>
            <value>
                <fullName>Off-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>Off-Campus restaurant</fullName>
            </value>
            <value>
                <fullName>Grocery Store</fullName>
            </value>
            <value>
                <fullName>Club store (i.e. Sam’s, CostCo)</fullName>
            </value>
            <value>
                <fullName>Other off-campus location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>