force-app/main/default/objects/Survey__c/fields/Where_Do_You_Buy_Snacks__c.field-meta.xml
<CustomField>
    <fullName>Where_Do_You_Buy_Snacks__c</fullName>
    <label>Where Do You Buy Snacks?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus dining hall</fullName>
            </value>
            <value>
                <fullName>On-Campus convenience store</fullName>
            </value>
            <value>
                <fullName>On Campus Grocery Store</fullName>
            </value>
            <value>
                <fullName>On-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>On-campus restaurant</fullName>
            </value>
            <value>
                <fullName>Other on-campus location</fullName>
            </value>
            <value>
                <fullName>Off-Campus convenience store</fullName>
            </value>
            <value>
                <fullName>Off-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>Off-Campus restaurant</fullName>
            </value>
            <value>
                <fullName>Other off-campus location</fullName>
            </value>
            <value>
                <fullName>Take food from home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>