force-app/main/default/objects/Survey__c/fields/Where_Do_You_Eat_Snacks__c.field-meta.xml
<CustomField>
    <fullName>Where_Do_You_Eat_Snacks__c</fullName>
    <label>Where Do You Eat Snacks?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus dining hall</fullName>
            </value>
            <value>
                <fullName>On-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>On-campus restaurant</fullName>
            </value>
            <value>
                <fullName>In class / At work</fullName>
            </value>
            <value>
                <fullName>At the gym/althletics</fullName>
            </value>
            <value>
                <fullName>At the library</fullName>
            </value>
            <value>
                <fullName>Other on-campus location</fullName>
            </value>
            <value>
                <fullName>On the go</fullName>
            </value>
            <value>
                <fullName>Off-Campus coffee shop</fullName>
            </value>
            <value>
                <fullName>Off-Campus restaurant</fullName>
            </value>
            <value>
                <fullName>Other off-campus location</fullName>
            </value>
            <value>
                <fullName>At home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>