force-app/main/default/objects/Survey__c/fields/Where_Do_You_Live__c.field-meta.xml
<CustomField>
    <fullName>Where_Do_You_Live__c</fullName>
    <label>Where Do You Live?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-campus dorm</fullName>
            </value>
            <value>
                <fullName>Off-campus</fullName>
            </value>
            <value>
                <fullName>Parent&apos;s</fullName>
            </value>
            <value>
                <fullName>Frat/Sorority House</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>