force-app/main/default/objects/Survey__c/fields/Where_Do_You_Shop_For_Home_Food__c.field-meta.xml
<CustomField>
    <fullName>Where_Do_You_Shop_For_Home_Food__c</fullName>
    <label>Where Do You Shop For Home Food?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large chain grocery store</fullName>
            </value>
            <value>
                <fullName>Independent grocery store</fullName>
            </value>
            <value>
                <fullName>Natural or Specialty grocery store</fullName>
            </value>
            <value>
                <fullName>Club store (i.e. Sam’s, CostCo)</fullName>
            </value>
            <value>
                <fullName>Farmers Markets</fullName>
            </value>
            <value>
                <fullName>Convenience Store (off campus)</fullName>
            </value>
            <value>
                <fullName>On-Campus Convenience or Grocery Store</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
            <value>
                <fullName>I don’t usually keep food at home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>